# proto-sim-portfolio

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  arbiter.toml  build.sh  compile.sh  foundry.toml  plot.html  prices.html  reserves.html
.github/workflows/: ci.yaml
contracts/: API.a.sol  Actor.sol  ArbiterContract.sol  Entrypoint.a.sol  Exchange.sol  ExtendedNormalCurveLib.sol  ExternalNormalStrategyLib.sol  HackDependencyImports.sol
output/: portfolio_0.01_0.csv  portfolio_0.1_0.csv  portfolio_1_0.csv
src/: bisection.rs  calls.rs  cli.rs  common.rs  config.rs  log.rs  main.rs  math.rs  plots.rs  raw_data.rs  setup.rs  sim.rs  spreadsheetorizer.rs  step.rs  task.rs
src/analysis/: mod.rs  trading_function.rs  trading_function_error.rs
test/: TestEntrypoint.t.sol  TestExchange.t.sol  TestExtendedNormalCurveLib.t.sol
